set error msg visibility depending on its content + fix muscle selector in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ button[id*="-btn"], a[id*="-btn"] {
 
 .error-wrapper {
   display: flex;
-  margin-top: 15px;
+  margin: 15px 0;
 }
 
 .error-msg {
